maintainIT2/src/objects/Certification__c.object
<CustomObject>
    <description>The Certification object is used to track registrations, license grants, etc. and can be related to an Asset, a Contact, and/or a User.</description>
    <fields>
        <fullName>Application_Date__c</fullName>
        <description>License Application Date - User Defined Date Field</description>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments - User Defined</description>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <description>License Cost - User Defined</description>
        <label>Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>License End Date / Expiry Date - User Defined Date Field</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Authority__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Account</description>
        <label>License Authority</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>License_Description__c</fullName>
        <description>License Description - User Defined</description>
        <label>License Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <description>License Type Picklist - User Defined</description>
        <label>License Type</label>
        <picklist>
            <picklistValues>
                <fullName>Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspection</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reference_ID__c</fullName>
        <description>License Reference ID - User Defined</description>
        <label>Reference ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Asset Tag for License Assignment</description>
        <label>Related Asset</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipName>Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Contact for License Assignment</description>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to User Record for License Assignment</description>
        <label>Related User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>License Start Date - User Defined Date Field</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Certification</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CI-{000000}</displayFormat>
        <label>Certification ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>